--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "categories": [
         "Other"
     ],
+    "icon": "images/as-fx-extension-logo.png",
     "keywords": [
         "flex",
         "actionscript",
