Use task's label, instead of deprecated identifier, for preLaunchTask

--- a/templates/project/AS3-mobile/.vscode/launch.json
+++ b/templates/project/AS3-mobile/.vscode/launch.json
@@ -8,7 +8,7 @@
             "type": "swf",
             "request": "launch",
             "name": "Launch SWF",
-            "preLaunchTask": "build-debug",
+            "preLaunchTask": "Compile debug",
             "profile": "mobileDevice",
             "screensize": "iPhoneRetina",
             "screenDPI": 326,
