--- a/templates/project/AS3-desktop/.vscode/launch.json
+++ b/templates/project/AS3-desktop/.vscode/launch.json
@@ -8,7 +8,7 @@
             "type": "swf",
             "request": "launch",
             "name": "Launch SWF",
-            "preLaunchTask": "build-debug"
+            "preLaunchTask": "Compile debug"
         },
         {
             "type": "swf",
