--- a/templates/project/AS3-desktop/.vscode/tasks.json
+++ b/templates/project/AS3-desktop/.vscode/tasks.json
@@ -4,13 +4,13 @@
 	"version": "2.0.0",
 	"tasks": [
 		{
-			"identifier": "build-debug",	
+			"label": "Compile debug",	
 			"type": "actionscript",
 			"debug": true,
-			"group": {
-				"kind": "build",
-				"isDefault": true
-			}
+            "group": {
+                "kind": "build",
+                "isDefault": true
+            }
 		}
 	]
 }
