--- a/templates/project/AS3-mobile/.vscode/tasks.json
+++ b/templates/project/AS3-mobile/.vscode/tasks.json
@@ -4,10 +4,9 @@
     "version": "2.0.0",
     "tasks": [
         {
-            "identifier": "build-debug",
+            "label": "Compile debug",
             "type": "actionscript",
             "debug": true,
-            //"air": "ios",
             "group": {
                 "kind": "build",
                 "isDefault": true
