--- a/templates/project/Flex-desktop/.vscode/launch.json
+++ b/templates/project/Flex-desktop/.vscode/launch.json
@@ -8,12 +8,12 @@
             "type": "swf",
             "request": "launch",
             "name": "Launch SWF",
-            "preLaunchTask": "build-debug"
+            "preLaunchTask": "Compile debug"
         },
         {
             "type": "swf",
             "request": "attach",
-            "name": "Attach SWF",
+            "name": "Attach SWF"
         }
     ]
 }
