--- a/templates/project/AS3-mobile/.vscode/launch.json
+++ b/templates/project/AS3-mobile/.vscode/launch.json
@@ -10,6 +10,9 @@
             "name": "Launch SWF",
             "preLaunchTask": "Compile debug",
             "profile": "mobileDevice",
+
+            // configuration settings for simulating devices:
+            // https://github.com/BowlerHatLLC/vscode-as3mxml/wiki/launch.json-configuration-settings-for-simulating-common-mobile-devices-in-Adobe-AIR
             "screensize": "iPhoneRetina",
             "screenDPI": 326,
             "versionPlatform": "IOS"
